renamed PyFDD to lowercase pyfdd

--- a/scripts/Library_explorer.ipynb
+++ b/scripts/Library_explorer.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "import sys, os\n",
     "sys.path.append(\"/home/eric/PycharmProjects/PyFDD\")\n",
-    "from PyFDD import lib2dl\n"
+    "from pyfdd import lib2dl"
    ]
   },
   {
@@ -61,8 +61,7 @@
     "                           \"factor\",\n",
     "                           \"u2\",\n",
     "                           \"sigma\"])\n",
-    "#for entry in lib.sim_list:\n",
-    "    "
+    "#for entry in lib.sim_list:"
    ]
   },
   {
@@ -15054,7 +15053,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -15065,5 +15064,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
