--- a/examples/Library_explorer.ipynb
+++ b/examples/Library_explorer.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "import sys, os\n",
     "sys.path.append(\"/home/eric/PycharmProjects/PyFDD\")\n",
-    "from pyfdd import lib2dl"
+    "from pyfdd import Lib2dl"
    ]
   },
   {
