--- a/examples/notebook_fitman_two_site_fit.ipynb
+++ b/examples/notebook_fitman_two_site_fit.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Two sites fits\n",
     "\n",
@@ -12,10 +15,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
-    "from PyFDD import fitman\n",
+    "from pyfdd import fitman\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import os\n",
@@ -25,7 +32,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "analysis_path = \"/home/eric/cernbox/University/CERN-projects/Betapix/Analysis/Channeling_analysis/\"\n",
@@ -55,6 +66,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "scrolled": false
    },
    "outputs": [],
@@ -115,7 +129,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Visualizing a single fit\n",
     "\n",
@@ -125,13 +142,17 @@
     "    \n",
     "use a scalars for P1, P2 and P3 and run as,\n",
     "\n",
-    "    fm.run_single(P1, P2, verbose=1, verbose_graphics=True, get_errors=True)\n"
+    "    fm.run_single_fit(P1, P2, verbose=1, verbose_graphics=True, get_errors=True)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": []
   }
