fixes to example notebooks

--- a/examples/notebook_fitman_two_site_fit.ipynb
+++ b/examples/notebook_fitman_two_site_fit.ipynb
@@ -114,7 +114,7 @@
     "    fm.set_minimization_settings(profile='fine')\n",
     "    \n",
     "    # Set a pattern or range of patterns to fit\n",
-    "    P1 = np.array((1,))   # single site\n",
+    "    P1 = np.array([1])   # single site\n",
     "    P2 = np.arange(1,249) # range - one more than the last\n",
     "    \n",
     "    # Run fits \n",
