updates to notebooks

--- a/examples/Library_explorer.ipynb
+++ b/examples/Library_explorer.ipynb
@@ -24,14 +24,18 @@
    "source": [
     "%matplotlib inline\n",
     "\n",
+    "#import sys\n",
+    "#sys.path.append(\"/home/eric/PycharmProjects/PyFDD\")\n",
+    "from pyfdd import Lib2dl\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
-    "from ipywidgets import widgets, Label\n",
+    "import os\n",
     "\n",
-    "\n",
-    "import sys, os\n",
-    "sys.path.append(\"/home/eric/PycharmProjects/PyFDD\")\n",
-    "from pyfdd import Lib2dl"
+    "pd.set_option('display.max_rows', 10000)\n",
+    "pd.set_option('display.max_columns', 500)\n",
+    "pd.set_option('display.max_colwidth', -1)"
    ]
   },
   {
@@ -15000,9 +15004,6 @@
     }
    ],
    "source": [
-    "pd.set_option('display.max_rows', 10000)\n",
-    "pd.set_option('display.max_columns', 500)\n",
-    "pd.set_option('display.max_colwidth', -1)\n",
     "df"
    ]
   },
@@ -15063,7 +15064,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
