--- a/examples/notebook_fitman_two_site_fit.ipynb
+++ b/examples/notebook_fitman_two_site_fit.ipynb
@@ -22,11 +22,18 @@
    },
    "outputs": [],
    "source": [
-    "from pyfdd import fitman\n",
+    "#import sys\n",
+    "#sys.path.append(\"/home/eric/PycharmProjects/PyFDD\")\n",
+    "from pyfdd import FitManager\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "import os\n",
-    "import numpy as np"
+    "\n",
+    "pd.set_option('display.max_rows', 10000)\n",
+    "pd.set_option('display.max_columns', 500)\n",
+    "pd.set_option('display.max_colwidth', -1)"
    ]
   },
   {
@@ -146,6 +153,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualizing results\n",
+    "\n",
+    "The results table is accessible in `FitManager.df`.\n",
+    "\n",
+    "The results pattern can be accessed with \n",
+    "```\n",
+    "FitManager.get_pattern_from_last_fit(normalization=None):\n",
+    "# or\n",
+    "FitManager.get_pattern_from_best_fit(normalization=None):\n",
+    "```\n",
+    "\n",
+    "The normalization can be `counts, yield or probability`\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "fm.df"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -154,7 +190,13 @@
     "editable": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "sim_patt = fm.get_pattern_from_last_fit(normalization='yield')\n",
+    "\n",
+    "fg = plt.figure()\n",
+    "ax = fg.add_subplot('111')\n",
+    "sim_patt.draw(ax, percentiles=(0.01, 0.99), plot_type='contour')"
+   ]
   }
  ],
  "metadata": {
