--- a/examples/notebook_dp_pad.ipynb
+++ b/examples/notebook_dp_pad.ipynb
@@ -23,10 +23,18 @@
    },
    "outputs": [],
    "source": [
+    "#import sys\n",
+    "#sys.path.append(\"/home/eric/PycharmProjects/PyFDD\")\n",
     "from pyfdd import DataPattern\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "pd.set_option('display.max_rows', 10000)\n",
+    "pd.set_option('display.max_columns', 500)\n",
+    "pd.set_option('display.max_colwidth', -1)"
    ]
   },
   {
