--- a/examples/notebook_dp_tpxquad.ipynb
+++ b/examples/notebook_dp_tpxquad.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Creating a DataPattern for the timepix quad\n",
     "\n",
@@ -13,18 +16,36 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
+    "#import sys\n",
+    "#sys.path.append(\"/home/eric/PycharmProjects/PyFDD\")\n",
     "from pyfdd import DataPattern\n",
-    "from ecsli_tools import *"
+    "from ecsli_tools import *\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "pd.set_option('display.max_rows', 10000)\n",
+    "pd.set_option('display.max_columns', 500)\n",
+    "pd.set_option('display.max_colwidth', -1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "filename1 = \"/home/user/path/to/pattern_1.txt\"\n",
@@ -34,7 +55,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Creating the DataPattern\n",
     "\n",
@@ -46,7 +70,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "dp1 = DataPattern(file_path=filename1, nChipsX=2, nChipsY=2, real_size=3)\n",
@@ -56,7 +84,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Manipulation of the data pattern"
    ]
@@ -64,7 +95,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -107,7 +142,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Set the angular orientation for the pattern"
    ]
@@ -116,6 +154,9 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": false
    },
    "outputs": [
@@ -931,6 +972,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": true
    },
    "outputs": [
@@ -951,7 +995,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Save as json file"
    ]
@@ -959,7 +1006,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "dp.io_save_json('/home/user/quad_datapattern.json')"
