update of lib2dl methods on notebooks

--- a/examples/Library_explorer.ipynb
+++ b/examples/Library_explorer.ipynb
@@ -61,7 +61,7 @@
     "analysis_path = \"/home/eric/cernbox/University/CERN-projects/Betapix/Analysis/Channeling_analysis/\"\n",
     "lib_path = os.path.join(analysis_path, \"FDD_libraries/GaN_89Sr/ue567g54.2dl\")\n",
     "lib = Lib2dl(lib_path)\n",
-    "df = pd.DataFrame(data=lib.sim_list,\n",
+    "df = pd.DataFrame(data=lib.get_simulations_list(),\n",
     "                  columns=[\"Spectrum number\",\n",
     "                           \"Spectrum_description\",\n",
     "                           \"factor\",\n",
