update jupyter notebooks in example

--- a/examples/notebook_dp_pad.ipynb
+++ b/examples/notebook_dp_pad.ipynb
@@ -23,9 +23,8 @@
    },
    "outputs": [],
    "source": [
-    "#import sys\n",
-    "#sys.path.append(\"/home/eric/PycharmProjects/PyFDD\")\n",
-    "from pyfdd import DataPattern\n",
+    "import pyfdd\n",
+    "print('PyFDD version', pyfdd.__version__)\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -75,8 +74,8 @@
    },
    "outputs": [],
    "source": [
-    "dp1 = DataPattern(file_path=filename1)\n",
-    "dp2 = DataPattern(file_path=filename2)\n",
+    "dp1 = pyfdd.DataPattern(file_path=filename1)\n",
+    "dp2 = pyfdd.DataPattern(file_path=filename2)\n",
     "dp = dp1 + dp2"
    ]
   },
