--- a/examples/notebook_dp_tpxquad.ipynb
+++ b/examples/notebook_dp_tpxquad.ipynb
@@ -23,9 +23,8 @@
    },
    "outputs": [],
    "source": [
-    "#import sys\n",
-    "#sys.path.append(\"/home/eric/PycharmProjects/PyFDD\")\n",
-    "from pyfdd import DataPattern\n",
+    "import pyfdd\n",
+    "print('PyFDD version', pyfdd.__version__)\n",
     "from ecsli_tools import *\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
@@ -77,8 +76,8 @@
    },
    "outputs": [],
    "source": [
-    "dp1 = DataPattern(file_path=filename1, nChipsX=2, nChipsY=2, real_size=3)\n",
-    "dp2 = DataPattern(file_path=filename2, nChipsX=2, nChipsY=2, real_size=3)\n",
+    "dp1 = pyfdd.DataPattern(file_path=filename1, nChipsX=2, nChipsY=2, real_size=3)\n",
+    "dp2 = pyfdd.DataPattern(file_path=filename2, nChipsX=2, nChipsY=2, real_size=3)\n",
     "dp = dp1 + dp2\n"
    ]
   },
