--- a/examples/notebook_fitman_two_site_fit.ipynb
+++ b/examples/notebook_fitman_two_site_fit.ipynb
@@ -22,9 +22,8 @@
    },
    "outputs": [],
    "source": [
-    "#import sys\n",
-    "#sys.path.append(\"/home/eric/PycharmProjects/PyFDD\")\n",
-    "from pyfdd import FitManager\n",
+    "import pyfdd\n",
+    "print('PyFDD version', pyfdd.__version__)\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -96,7 +95,7 @@
     "    # The number of subpixels used in the past has been 6 for the pad\n",
     "    # for the timepix depending on the number of added pixels in the DataPattern \n",
     "    # is set to half the number of added pixels\n",
-    "    fm = FitManager(cost_function='chi2', sub_pixels=2)\n",
+    "    fm = pyfdd.FitManager(cost_function='chi2', sub_pixels=2)\n",
     "    \n",
     "    # Set the pattern and library to fit with\n",
     "    fm.set_pattern(filename, library)\n",
@@ -154,7 +153,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Visualizing results\n",
     "\n",
@@ -174,7 +176,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
