simple fix on example

--- a/examples/notebook_fitman_two_site_fit.ipynb
+++ b/examples/notebook_fitman_two_site_fit.ipynb
@@ -95,7 +95,7 @@
     "    # The number of subpixels used in the past has been 6 for the pad\n",
     "    # for the timepix depending on the number of added pixels in the DataPattern \n",
     "    # is set to half the number of added pixels\n",
-    "    fm = pyfdd.FitManager(cost_function='chi2', sub_pixels=2)\n",
+    "    fm = pyfdd.FitManager(cost_function='chi2', n_sites=2, sub_pixels=2)\n",
     "    \n",
     "    # Set the pattern and library to fit with\n",
     "    fm.set_pattern(filename, library)\n",
