added display command

--- a/examples/Library_explorer.ipynb
+++ b/examples/Library_explorer.ipynb
@@ -25,7 +25,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PyFDD version 0.6.2\n"
+      "PyFDD version 0.7.0\n"
      ]
     }
    ],
@@ -42,6 +42,8 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import os\n",
+    "\n",
+    "from IPython.display import display\n",
     "\n",
     "pd.set_option('display.max_rows', 10000)\n",
     "pd.set_option('display.max_columns', 500)\n",
@@ -60,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -82,9 +84,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -12550,13 +12554,12 @@
        "1239  0.0    0.6      8.0   "
       ]
      },
-     "execution_count": 4,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "df"
+    "display(df)"
    ]
   },
   {
