--- a/examples/notebook_dp_pad.ipynb
+++ b/examples/notebook_dp_pad.ipynb
@@ -31,6 +31,8 @@
     "import pandas as pd\n",
     "import os\n",
     "\n",
+    "from IPython.display import display\n",
+    "\n",
     "pd.set_option('display.max_rows', 10000)\n",
     "pd.set_option('display.max_columns', 500)\n",
     "pd.set_option('display.max_colwidth', -1)"
