--- a/examples/notebook_fitman_two_site_fit.ipynb
+++ b/examples/notebook_fitman_two_site_fit.ipynb
@@ -30,6 +30,8 @@
     "import pandas as pd\n",
     "import os\n",
     "\n",
+    "from IPython.display import display\n",
+    "\n",
     "pd.set_option('display.max_rows', 10000)\n",
     "pd.set_option('display.max_columns', 500)\n",
     "pd.set_option('display.max_colwidth', -1)"
@@ -182,7 +184,7 @@
    },
    "outputs": [],
    "source": [
-    "fm.df"
+    "display(fm.df_horizontal)"
    ]
   },
   {
