orientation now uses cw and cc instead of rr and rl

--- a/examples/notebook_dp_tpxquad.ipynb
+++ b/examples/notebook_dp_tpxquad.ipynb
@@ -104,9 +104,9 @@
     "dp.mask_std(4)\n",
     "\n",
     "# -Orient\n",
-    "# use 'rr','rl','mh',mv' for rotate right, rotate left, mirror horizontal and mirror vertical\n",
+    "# use 'cw','cc','mh',mv' for rotate clockwise, rotate counterclockwise, mirror horizontal and mirror vertical\n",
     "# in the desired order\n",
-    "dp.manip_orient('rl,mh')  # TimepixQuad orientation\n",
+    "dp.manip_orient('cc, mh')  # TimepixQuad orientation\n",
     "\n",
     "# -Angular calibration\n",
     "dp.manip_create_mesh(pixel_size=0.055, distance=315)\n",
