--- a/examples/notebook_dp_pad.ipynb
+++ b/examples/notebook_dp_pad.ipynb
@@ -84,8 +84,8 @@
     "\n",
     "# Manipulation methods\n",
     "# -Orient\n",
-    "dp.manip_orient('rr')  # PAD6 orientation\n",
-    "# use 'rr','rl','mh',mv' for rotate right, rotate left, mirror horizontal and mirror vertical\n",
+    "dp.manip_orient('cw')  # PAD6 orientation\n",
+    "# use 'cw','cc','mh',mv' for rotate clockwise, rotate counterclockwise, mirror horizontal and mirror vertical\n",
     "# in the desired order\n",
     "\n",
     "# Mask\n",
