--- a/examples/notebook_dp_tpxquad.ipynb
+++ b/examples/notebook_dp_tpxquad.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "pd.set_option('display.max_rows', 10000)\n",
     "pd.set_option('display.max_columns', 500)\n",
-    "pd.set_option('display.max_colwidth', -1)"
+    "pd.set_option('display.max_colwidth', None)"
    ]
   },
   {
@@ -43,8 +43,7 @@
    "outputs": [],
    "source": [
     "filename1 = \"/home/user/path/to/pattern_1.txt\"\n",
-    "filename2 = \"/home/user/path/to/pattern_2.txt\"\n",
-    "filename = \"/home/eric/cernbox/Betapix_CERN/2016/2016-04_Mg/raw002/pattern_d3_Npix0-50.txt\""
+    "filename2 = \"/home/user/path/to/pattern_2.txt\""
    ]
   },
   {
@@ -940,8 +939,8 @@
     "%matplotlib notebook\n",
     "fg = plt.figure()\n",
     "ax = fg.add_subplot('111')\n",
-    "dp.draw(ax, percentiles=(0.04, 0.99))\n",
-    "dp.get_angle_tool()"
+    "dp_plotter = dp.draw(ax, percentiles=(0.04, 0.99))\n",
+    "dp_plotter.get_angle_tool()"
    ]
   },
   {
