--- a/examples/notebook_fitman_multiple_site_fit.ipynb
+++ b/examples/notebook_fitman_multiple_site_fit.ipynb
@@ -2,10 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Two sites fits\n",
     "\n",
@@ -16,9 +13,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -41,9 +36,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -75,8 +68,6 @@
    "execution_count": null,
    "metadata": {
     "collapsed": true,
-    "deletable": true,
-    "editable": true,
     "scrolled": false
    },
    "outputs": [],
@@ -106,17 +97,17 @@
     "    fm.set_pattern(filename, library)\n",
     "    \n",
     "    # Set a fixed value if needed \n",
-    "    fm.set_fixed_values(sigma=0.06)\n",
+    "    fm.fit_parameters.change_fixed_values(sigma=0.06)\n",
     "    \n",
     "    # You probably wont need to change defaults but in any case the methods are here\n",
     "    # Change default bounds\n",
-    "    #fm.set_bounds()\n",
+    "    #fm.fit_parameters.change_bounds()\n",
     "    \n",
     "    # Change default  \n",
-    "    #fm.set_step_modifier(dx=.01,dy=.01,phi=.10,sigma=.001,total_cts=0.01,f_p1=.01,f_p2=.01)\n",
+    "    #fm.fit_parameters.change_step_modifier(dx=.01,dy=.01,phi=.10,sigma=.001,total_cts=0.01,f_p1=.01,f_p2=.01)\n",
     "    \n",
     "    # Change initial values\n",
-    "    #fm.set_initial_values()\n",
+    "    #fm.fit_parameters.change_initial_values()\n",
     "    \n",
     "    # Set a minization profile\n",
     "    # use 'coarse' for testing (it can avoid the program to hang if the fit is too hard),\n",
@@ -139,10 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Visualizing a single fit\n",
     "\n",
@@ -157,10 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Visualizing results\n",
     "\n",
@@ -180,9 +165,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -193,9 +176,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -223,7 +204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
